# jarvis-llm-proxy-api

./: .dockerignore  .env.backup  .env.minimal  .gitignore  CLAUDE.md  CROSS_PLATFORM_CHANGES.md  Dockerfile  Dockerfile.cpu  Dockerfile.rocm  Dockerfile.vulkan  GGUF_QUICK_REFERENCE.md  INTEGRATION_SUMMARY.md  LICENSE  README.md  REST_BACKEND_CONFIG.md  SCRIPT_CONSOLIDATION.md  SETUP.md  VISION_COMPLETIONS_CHANGES.md  alembic.ini  apply_migrations.sh  cleanup-gpu.sh  cleanup-processes.sh  deploy-launchd.sh  docker-compose.dev.yaml  docker-compose.prod.yaml  env.docker.template  env.generated  env.template  gpu_select.py  main.py  make_migration.sh  model_reference.md  pyproject.toml  requirements-base.txt  requirements-cpu.txt  requirements-cuda.txt  requirements-metal.txt  requirements-rocm.txt  requirements-transformers.txt  requirements-vllm.txt  (+13 more)
.models/: .gitkeep
alembic/: env.py
api/: adapter_routes.py  chat_routes.py  embedding_routes.py  health_routes.py  model_routes.py  pipeline_routes.py  queue_routes.py  settings_routes.py  training_routes.py
auth/: app_auth.py
backends/: base.py  chat_formats.py  gguf_backend.py  gguf_vision_backend.py  mlx_backend.py  mlx_vision_backend.py  mock_backend.py  power_metrics.py  rest_backend.py  transformers_backend.py  transformers_vision_backend.py  vllm_backend.py  vllm_vision_backend.py
cache/: __init__.py  cache_manager.py  conversation_cache.py  local_conversation_cache.py
config/: __init__.py  debug_config.py  logging_config.py  service_config.py
data/: jarvis_training.jsonl
db/: __init__.py  base.py  (+2 more)
(+146 files in other folders)
